--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/appicon"
         android:supportsRtl="true"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LandingActivity"
@@ -17,7 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"
-                  android:label=""></activity>
+                  android:label="">
+            <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.mehequanna.gitawesome.LandingActivity" /></activity>
     </application>
 
 </manifest>
