Add ui folder and move activities.

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,16 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+# org.gradle.jvmargs=-Xmx1536m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+GIT_CLIENT_ID = "0fe99707b596d6a52b84";
+GIT_CLIENT_SECRET = "2ffc1a2bfc26a6eacbad1c83fc31f3f6199e83a0";
+
+# In case OAUTH doesn't work.
+GIT_API_KEY = "f3c57ed9a2ab26952ac0e8b1b7ed9f3ba2910496";
