--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mehequanna.gitawesome">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -28,9 +28,10 @@
         </activity>
         <activity android:name=".ui.UserActivity">
             <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.mehequanna.gitawesome.ui.LandingActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mehequanna.gitawesome.ui.LandingActivity" />
         </activity>
+        <activity android:name=".ui.GitsActivity"></activity>
     </application>
 
 </manifest>
