--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
 
-    compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    compile 'com.google.firebase:firebase-auth:9.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
