Add binds and click listeners to CreateAccountActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,11 +39,7 @@
         <activity
             android:name=".ui.AboutActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
-        <activity android:name=".ui.CreateAccountActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mehequanna.gitawesome.ui.LoginActivity" />
-        </activity>
+        <activity android:name=".ui.CreateAccountActivity"/>
     </application>
 
 </manifest>
